--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,6 @@ body {
   font-family: arial, sans-serif;
 }
 
-.weather-app {
-  max-width: 600px;
-  margin: 25px auto;
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
-}
-
 h1 {
   color: #5f6366;
   font-size: 24px;
@@ -29,4 +21,49 @@ li {
   font-size: 15px;
   font-weight: 100;
   line-height: 18px;
+}
+
+a {
+  text-decoration: none;
+}
+
+small {
+  color: #70757a;
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 25px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+.description {
+  margin-bottom: 18px;
+}
+
+.weather-temperature img {
+  margin-right: 15px;
+  display: inline-block;
+  height: 60px;
+  margin-top: unset;
+  vertical-align: top;
+  width: 60px;
+}
+
+.weather-temperature strong {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 56px;
+}
+
+.weather-temperature .units {
+  color: #202124;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 4px;
+  padding-left: 4px;
+  vertical-align: top;
 }
