--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 body {
   font-family: arial, sans-serif;
+  background: url(https://images.pexels.com/photos/2114014/pexels-photo-2114014.jpeg?auto=compress&cs=tinysrgb&w=600);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -41,7 +46,7 @@ small {
   padding: 25px;
   border: 1px solid #dadde1;
   border-radius: 10px;
-  background-color: #cedce7;
+  background-color: rgba(255, 255, 255, 0.3);
   display: block;
 }
 
